fixed windows compile issues, added flag to disable importer building, and updated owl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ cmake_minimum_required(VERSION 3.16)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+option(MINI_BUILD_IMPORTERS "Build Importers? (needs more dependencies)" ON)
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL 3.18)
   cmake_policy(SET CMP0104 NEW)
 endif()
@@ -29,22 +30,28 @@ endif()
 # general cmake project configs
 # ------------------------------------------------------------------
 include(cmake/configure_build_type.cmake)
+if (MINI_BUILD_IMPORTERS)
 include(cmake/FindOpenEXR.cmake)
+endif()
 
 # ------------------------------------------------------------------
 # owl:
 # ------------------------------------------------------------------
 add_subdirectory(submodules/owl EXCLUDE_FROM_ALL)
-
+message(STATUS "OWl configured")
 # ------------------------------------------------------------------
 # pbrtParser
 # ------------------------------------------------------------------
 add_subdirectory(submodules/pbrt-parser EXCLUDE_FROM_ALL)
+message(STATUS "pbrtParser configured")
 
 # ------------------------------------------------------------------
 # disney ptex for importer
 # ------------------------------------------------------------------
+if (MINI_BUILD_IMPORTERS)
 add_subdirectory(submodules/ptex EXCLUDE_FROM_ALL)
+message(STATUS "PTex configured")
+endif()
 
 # ------------------------------------------------------------------
 # cuda tools for pbrt scene
