--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -80,6 +80,9 @@ target_link_libraries(miniReplicate
 # a trivially simple owl-based viewer, to sanity test ... don't expct
 # much, this only shows flat triangles
 # -----------------------------------------------------------------------------
-add_subdirectory(viewer)
+if (MINI_BUILD_VIEWER)
+  add_subdirectory(viewer)
+endif()
+
 
 
