made mini work without owl

--- a/miniScene/CMakeLists.txt
+++ b/miniScene/CMakeLists.txt
@@ -29,7 +29,7 @@ add_library(miniScene STATIC
 target_link_libraries(miniScene
   PUBLIC
   mini_owl_common
-  stb_image
+#  stb_image
   )
 target_include_directories(miniScene
   PUBLIC
