various fixes for build-with-owl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,7 @@ if (MINI_HAVE_CUDA AND MINI_IMPORT_OWL)
     INTERFACE
     )
   target_link_libraries(mini_owl_common INTERFACE owl::owl)
-  target_compile_definitions(mini_owl_common -DMINI_HAVE_OWL_COMMON=1)
+  target_compile_definitions(mini_owl_common INTERFACE -DMINI_HAVE_OWL_COMMON=1)
 else()
   add_library(mini_owl_common
     INTERFACE
