add subdiv tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,10 @@ add_subdirectory(importers)
 add_subdirectory(tools)
 
 
+# ------------------------------------------------------------------
+#this is where we add subdiv tool
+# ------------------------------------------------------------------
+
 
 
 
