binmesh exporter working, fixed one or two more bugs in build scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ if (MINI_HAVE_CUDA AND MINI_IMPORT_OWL)
   add_library(mini_owl_common
     INTERFACE
     )
-  target_link_libraries(mini_owl_common INTERFACE owl::owl)
+  target_link_libraries(mini_owl_common INTERFACE owl::owl stb_image)
   target_compile_definitions(mini_owl_common INTERFACE -DMINI_HAVE_OWL_COMMON=1)
 else()
   add_library(mini_owl_common
@@ -89,14 +89,14 @@ else()
     INTERFACE
     submodules/owl/owl/include/
     )
-  if (MINI_BUILD_SIMPLE_IMPORTERS)
-    add_subdirectory(submodules/owl/3rdParty/stb_image EXCLUDE_FROM_ALL)
-    target_link_libraries(
-      mini_owl_common
-      INTERFACE
-      stb_image
-  )
-  endif()
+#  if (MINI_BUILD_SIMPLE_IMPORTERS)
+#    add_subdirectory(submodules/owl/3rdParty/stb_image EXCLUDE_FROM_ALL)
+#    target_link_libraries(
+#      mini_owl_common
+#      INTERFACE
+#      stb_image
+#  )
+#  endif()
 endif()
 
 # ------------------------------------------------------------------
