--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,14 +53,15 @@ include(CheckLanguage)
 if (MINI_DISABLE_CUDA)
   message(STATUS "#mini: Disabling CUDA support upon user request")
   set(MINI_HAVE_CUDA OFF)
-else()
-  check_language(CUDA)
-  if (CMAKE_CUDA_COMPILER)
-    set(MINI_HAVE_CUDA ON)
-    enable_language(CUDA)
-  else()
-    set(MINI_HAVE_CUDA OFF)
-  endif()
+else()  
+  enable_language(CUDA)
+#  check_language(CUDA)
+#  if (CMAKE_CUDA_COMPILER)
+   set(MINI_HAVE_CUDA ON)
+#    enable_language(CUDA)
+#  else()
+#    set(MINI_HAVE_CUDA OFF)
+#  endif()
 endif()
 
 # ------------------------------------------------------------------
