added direct copy of stb_image to miniScene, so it can build obj importer even w/o having owl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ endif()
 # ------------------------------------------------------------------
 # owl:
 # ------------------------------------------------------------------
-if (MINI_HAVE_CUDA AND MINI_IMPORT_OWL)
+if (MINI_IMPORT_OWL)
   add_subdirectory(submodules/owl EXCLUDE_FROM_ALL)
   add_library(mini_owl_common
     INTERFACE
@@ -83,6 +83,7 @@ if (MINI_HAVE_CUDA AND MINI_IMPORT_OWL)
   target_link_libraries(mini_owl_common INTERFACE owl::owl stb_image)
   target_compile_definitions(mini_owl_common INTERFACE -DMINI_HAVE_OWL_COMMON=1)
 else()
+  add_subdirectory(miniScene/common/stb_image EXCLUDE_FROM_ALL)
   add_library(mini_owl_common
     INTERFACE
     )
@@ -90,14 +91,6 @@ else()
     INTERFACE
     submodules/owl/owl/include/
     )
-#  if (MINI_BUILD_SIMPLE_IMPORTERS)
-#    add_subdirectory(submodules/owl/3rdParty/stb_image EXCLUDE_FROM_ALL)
-#    target_link_libraries(
-#      mini_owl_common
-#      INTERFACE
-#      stb_image
-#  )
-#  endif()
 endif()
 
 # ------------------------------------------------------------------
