not including owl if target already open

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,14 +58,14 @@ endif()
 # submodule, simply include owl _before_ including miniScene, then it
 # will pick up the target
 # ------------------------------------------------------------------
-if(EXISTS "${PROJECT_SOURCE_DIR}/submodules/owl/CMakeLists.txt")
+  if(MINI_IS_SUBMODULE AND (TARGET owl::owl))
+  message(STATUS "miniScene: owl target exists from another sibling submodule; using it")
+  set(MINI_HAVE_OWL ON)
+  set(MINI_HAVE_STB ON)
+elseif(EXISTS "${PROJECT_SOURCE_DIR}/submodules/owl/CMakeLists.txt")
   message(STATUS "miniScene: found owl as submodule - using it")
   enable_language(CUDA)
   add_subdirectory(submodules/owl EXCLUDE_FROM_ALL)
-  set(MINI_HAVE_OWL ON)
-  set(MINI_HAVE_STB ON)
-elseif(MINI_IS_SUBMODULE AND (TARGET owl::owl))
-  message(STATUS "miniScene: owl target exists from another sibling submodule; using it")
   set(MINI_HAVE_OWL ON)
   set(MINI_HAVE_STB ON)
 else ()
